Update 프로그래핑 문법과 로직 (11.28).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -279,3 +279,27 @@ WRITE: pa_c, pa_g.
 
 <img width="558" height="205" alt="image" src="https://github.com/user-attachments/assets/c848a315-fa78-4ed6-a885-8d9416be3d4f" />
 
+</br>
+</br>
+</br>
+</br>
+
+### 실습 3
+- buffering 설정 실습
+
+**1) `ZEMPLOY03` transparent 테이블**
+
+<img width="560" height="295" alt="image" src="https://github.com/user-attachments/assets/d53c661f-a1e3-4b73-a0f5-c674d7a1e529" />
+
+</br>
+</br>
+
+**2) buffer 설정**
+
+<img width="399" height="343" alt="image" src="https://github.com/user-attachments/assets/dbcf567f-4e86-4819-9462-d84a76fc926f" />
+</br>
+</br>
+
+**3) allow 설정**
+
+<img width="558" height="205" alt="image" src="https://github.com/user-attachments/assets/c848a315-fa78-4ed6-a885-8d9416be3d4f" />
