Update 프로그래핑 문법과 로직 (11.28).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -285,7 +285,7 @@ WRITE: pa_c, pa_g.
 </br>
 
 ### 실습 3
-- buffering 설정 실습
+- Fixed value 실습
 
 **1) `ZEMPLOY03` transparent 테이블**
 
@@ -294,12 +294,14 @@ WRITE: pa_c, pa_g.
 </br>
 </br>
 
-**2) buffer 설정**
+**2) Fixed Value 설정**
 
-<img width="399" height="343" alt="image" src="https://github.com/user-attachments/assets/dbcf567f-4e86-4819-9462-d84a76fc926f" />
+<img width="504" height="388" alt="image" src="https://github.com/user-attachments/assets/ccb103ea-53de-4aeb-b477-61e240fef77b" />
+
 </br>
 </br>
 
-**3) allow 설정**
+**3) 출력 확인**
 
-<img width="558" height="205" alt="image" src="https://github.com/user-attachments/assets/c848a315-fa78-4ed6-a885-8d9416be3d4f" />
+<img width="506" height="440" alt="image" src="https://github.com/user-attachments/assets/ea037303-c361-4ae1-9150-b3276f1fb32c" />
+
