Update 프로그래핑 문법과 로직 (11.28).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.28).md
@@ -305,4 +305,31 @@ WRITE: pa_c, pa_g.
 
 <img width="433" height="376" alt="image" src="https://github.com/user-attachments/assets/5bf5c3d4-64d2-4db1-8c2e-7d5bdef3ac49" />
 
+</br>
+</br>
+</br>
+</br>
+
+### 실습 4
+- Fixed value 실습
+
+**1) `ZTPERSON_B03` transparent 테이블**
+
+<img width="565" height="307" alt="image" src="https://github.com/user-attachments/assets/33141aa7-4d2d-4d58-bf01-fb012cde2bc9" />
+
+</br>
+</br>
+
+**2) Fixed Value 설정**
+
+<img width="419" height="294" alt="image" src="https://github.com/user-attachments/assets/51aa0b8c-0257-4d54-b60f-482e5148250f" />
+
+</br>
+</br>
+
+**3) 출력 확인**
+
+<img width="419" height="369" alt="image" src="https://github.com/user-attachments/assets/a953934a-8836-46ce-a57b-14d407abfb18" />
+
+
 
