--- a/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.27).md
@@ -349,7 +349,7 @@ CONSTANTS ztb03_pi TYPE F VALUE '3.14'.
 
 **2) Program 에서 사용 형식** 
 - icon 그림 표 보고 싶을 때는 SE38 -> SHOWICON 쳐서 실행
-- 색상 표 보고싶을 때는 SE38 -> RS_SCRP_SCREEN_COLORS 쳐서 실행
+- 색상 표 보고싶을 때는 SE38 -> DEMO_LIST_FORMAT_COLOR_1 쳐서 실행
 ```abap
 TYPE-POOLS: ZTB03, COL, ICON.
 
