Update 프로그래핑 문법과 로직 (11.14).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -23,6 +23,18 @@
 - `/i` : 현재 화면 닫기
 </br>
 
+### TCODE 생성 방법
+- `SE93` 검색 -> Create (생성) 버튼을 클릭 -> `Program and selection screen (report transaction)`을 선택함
+  - `Program and dynpro` : 화면(Screen/Dynpro) 번호를 지정하여, 그 화면부터 상호작용을 시작
+  - `Program and selection screen` : 선택 화면(Selection Screen)을 먼저 띄워서 사용자에게 조건을 입력받고 결과를 출력
+  - `Method of a class`: ABAP Class의 특정 메서드(Method)를 실행하여 비즈니스 로직을 시작
+  - `Transaction with parameters` : 기존 TCODE를 실행하되, 특정 파라미터를 미리 세팅하여 자동 실행
+    
+  <img width="370" height="368" alt="image" src="https://github.com/user-attachments/assets/c0b9c4cf-b765-4e4a-b6f5-02971aa88c8d" />
+
+</br>
+</br>
+
 ### SAP Input Help
 - 특정 입력 필드에서 값 목록을 보여주는 기능을 총칭
 - 모두 같은 개념으로 F4 키를 누르면 뜨는 팝업
