--- a/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (11.14).md
@@ -29,6 +29,7 @@
   - `Program and selection screen` : 선택 화면(Selection Screen)을 먼저 띄워서 사용자에게 조건을 입력받고 결과를 출력
   - `Method of a class`: ABAP Class의 특정 메서드(Method)를 실행하여 비즈니스 로직을 시작
   - `Transaction with parameters` : 기존 TCODE를 실행하되, 특정 파라미터를 미리 세팅하여 자동 실행
+- 생성한 TCODE를 창에 입력하면 이동. ex) `YPROGB03_ASSIGNMENT1`
     
   <img width="370" height="368" alt="image" src="https://github.com/user-attachments/assets/c0b9c4cf-b765-4e4a-b6f5-02971aa88c8d" />
 
