Update 프로그래핑 문법과 로직 (12.01).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -4,7 +4,7 @@
 - `check field` 를 기준으로 데이터 존재 여부를 확인
 - `countnum` 에 해당하는 값만 생성 가능
 - Check 테이블에 없는 값은 추가 불가 → 에러 발생
-- Check 필드와 countnum의 도메인은 반드시 일치해야 함
+- Check 필드(F>K가 됨)와 countnum의 도메인은 반드시 일치해야 함
 </br>
 
 ### 2) 값 테이블 (Value Table)
