--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -22,6 +22,22 @@
 </br>
 </br>
 
+### < Cardinality(관계 대응 타입) >
+- 테이블 간의 관계에서 한쪽 엔티티가 다른 엔티티와 맺을 수 있는 데이터 개수를 의미
+**1) 1:1 (One to One)**
+- 한 레코드가 다른 테이블의 정확히 하나의 레코드와만 연결
+
+**2) 1:N (One to Many)**
+- 한 레코드가 다른 테이블의 여러 레코드와 연결 가능
+
+**3) 1:C**
+- 특정 도메인 기반으로 한 개의 값이 여러 개의 제한 값과 연결되는 상황
+
+**4) 1:CN**
+- 1:N과 유사하나, Check Table & Domain 조합을 통한 확장된 다중 매핑을 의미
+
+<img width="424" height="292" alt="image" src="https://github.com/user-attachments/assets/b7b99ccc-6020-4f22-a169-a84fd7b67a70" />
+
 ---
 
 </br>
