Update 프로그래핑 문법과 로직 (12.01).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -39,6 +39,16 @@
 
 <img width="495" height="341" alt="image" src="https://github.com/user-attachments/assets/6f5af294-992a-4ae0-904a-e70644e0f31d" />
 
+</br>
+</br>
+</br>
+</br>
+
+### < 외래 키 (Foreign Key) 설정 과정 >
+- 도메인에 Value Table 설정
+
+<img width="431" height="390" alt="image" src="https://github.com/user-attachments/assets/37619d4e-d5f5-49a1-ac7e-0684bfbc6d8b" />
+
 
 ---
 
