--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -45,10 +45,14 @@
 </br>
 
 ### < 외래 키 (Foreign Key) 설정 과정 >
-- 도메인에 Value Table 설정
+**1) 도메인에 Value Table 설정**
 
 <img width="431" height="390" alt="image" src="https://github.com/user-attachments/assets/37619d4e-d5f5-49a1-ac7e-0684bfbc6d8b" />
+</br>
+</br>
 
+**2) 외래 키 생성 시도**
+<img width="521" height="286" alt="image" src="https://github.com/user-attachments/assets/d21b9e8b-4b81-40c8-af64-83516b7153b1" />
 
 ---
 
