Update 프로그래핑 문법과 로직 (12.01).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -54,6 +54,28 @@
 **2) 외래 키 생성 시도**
 
 <img width="521" height="286" alt="image" src="https://github.com/user-attachments/assets/d21b9e8b-4b81-40c8-af64-83516b7153b1" />
+</br>
+</br>
+
+**3) 외래 키 필드 매핑**
+-	2번째 : 키필드가 아닌거
+-	3번째 : 키필드인 경우 
+  
+<img width="528" height="388" alt="image" src="https://github.com/user-attachments/assets/52135de2-25c5-4300-bedb-127b0dc6ec69" />
+</br>
+</br>
+
+**4) 외래 키 필드 매핑**
+- 체크 테이블에 데이터 저장
+  
+<img width="579" height="281" alt="image" src="https://github.com/user-attachments/assets/df0be43e-b927-48e0-83c0-2545cffdacd0" />
+</br>
+</br>
+
+**5) 외래 키 테이블 확인**
+- 최종 결과 확인
+
+<img width="529" height="331" alt="image" src="https://github.com/user-attachments/assets/d5312dea-d595-40e1-99c4-2cf2a5b82397" />
 
 ---
 
