Update 프로그래핑 문법과 로직 (12.01).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -73,7 +73,7 @@
 </br>
 
 **5) 외래 키 테이블 확인**
-- 최종 결과 확인
+- 유효한 값 목록이 자동으로 연결되어 표시
 
 <img width="529" height="331" alt="image" src="https://github.com/user-attachments/assets/d5312dea-d595-40e1-99c4-2cf2a5b82397" />
 
