--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -59,7 +59,8 @@
 
 **3) 외래 키 필드 매핑**
 -	2번째 : 키필드가 아닌거
--	3번째 : 키필드인 경우 
+-	3번째 : 키필드인 경우
+-	보통은 `1:CN`
   
 <img width="561" height="411" alt="image" src="https://github.com/user-attachments/assets/b3ebdb70-da38-4a84-80c3-6246b771bd43" />
 
