Update 프로그래핑 문법과 로직 (12.01).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -87,3 +87,8 @@
 
 ## < 실습 코드 >
 ### 실습 1
+
+**1) 체크 테이블 설정**
+
+<img width="569" height="209" alt="image" src="https://github.com/user-attachments/assets/2a742044-d5db-4007-8b81-8cef0ada1289" />
+
