Update 프로그래핑 문법과 로직 (12.01).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -94,4 +94,9 @@
 </br>
 </br>
 
-**2) 체크 테이블 설정**
+**2) 체크 테이블에 데이터 저장**
+
+<img width="569" height="244" alt="image" src="https://github.com/user-attachments/assets/ffb61c78-c8e4-43cb-87e0-d7fc6efef355" />
+</br>
+</br>
+
