Update 프로그래핑 문법과 로직 (12.01).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -100,3 +100,12 @@
 </br>
 </br>
 
+**3) 외래 키 테이블 설정**
+
+<img width="573" height="217" alt="image" src="https://github.com/user-attachments/assets/5be3324a-b0fe-4239-b9cb-e19fa8598765" />
+</br>
+</br>
+
+**4) CARRIER에 외래 키 생성**
+
+<img width="496" height="364" alt="image" src="https://github.com/user-attachments/assets/aab1a24c-d685-4d8a-8f85-e2d99c97ceef" />
