Update 프로그래핑 문법과 로직 (12.01).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -109,3 +109,15 @@
 **4) CARRIER에 외래 키 생성**
 
 <img width="496" height="364" alt="image" src="https://github.com/user-attachments/assets/aab1a24c-d685-4d8a-8f85-e2d99c97ceef" />
+</br>
+</br>
+
+**5) 외래 키 테이블 결과 확인**
+
+<img width="536" height="262" alt="image" src="https://github.com/user-attachments/assets/e9ddaba3-dc17-4dae-8e7b-ff4f6326c0de" />
+</br>
+</br>
+</br>
+</br>
+
+### 실습 2
