--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -121,3 +121,6 @@
 </br>
 
 ### 실습 2
+
+**< 문제 >**
+<img width="553" height="504" alt="image" src="https://github.com/user-attachments/assets/f03492b1-6706-40f4-9c08-5cb3103a4126" />
