Update 프로그래핑 문법과 로직 (12.01).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -1,7 +1,8 @@
 ## < 점검 테이블과 값 제한 관리 >
-- 상위/기준 엔티티: 참조되는 테이블 (기본 키를 제공)
-- 하위/종속 엔티티: 참조하는 테이블 (외래 키를 가짐)
+- **상위/기준 엔티티** : 참조되는 테이블 (기본 키를 제공)
+- **하위/종속 엔티티** : 참조하는 테이블 (외래 키를 가짐)
 - 외래키는 하위 필드를 기준으로 결정
+  </br>
   
 ### 1) 체크 테이블 (Check Table)
 - 데이터 점검하는 기준 제공
