--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -129,5 +129,8 @@
 ### 실습 2
 
 **< 문제 >**
+- 체육관 (`GYM_ID`) : 가장 상위 개념
+- 클래스 (`CLASS_ID`) : 체육관에 종속됨
+- 회원 (`MEMBER_ID`) : 클래스에 종속됨
 
 <img width="553" height="504" alt="image" src="https://github.com/user-attachments/assets/f03492b1-6706-40f4-9c08-5cb3103a4126" />
