Update 프로그래핑 문법과 로직 (12.01).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -140,3 +140,9 @@
 **1) 상위 `ZTGYM_B03` 테이블**
 
 <img width="555" height="218" alt="image" src="https://github.com/user-attachments/assets/25c5a67f-c1ce-4d35-aaf5-728593e3bae8" />
+</br>
+</br>
+
+**2) `ZTGYM_B03` 테이블 내 외래 키 설정 - `CLASS_ID`**
+
+<img width="552" height="399" alt="image" src="https://github.com/user-attachments/assets/6eb2a140-ef07-4edb-9b53-f73378342cc5" />
