Update 프로그래핑 문법과 로직 (12.01).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -146,3 +146,16 @@
 **2) `ZTGYM_B03` 테이블 내 외래 키 설정 - `CLASS_ID`**
 
 <img width="552" height="399" alt="image" src="https://github.com/user-attachments/assets/6eb2a140-ef07-4edb-9b53-f73378342cc5" />
+</br>
+</br>
+
+**3) `CLASS_ID`의 data element**
+
+<img width="529" height="327" alt="image" src="https://github.com/user-attachments/assets/73ff5f37-9716-42c6-acd6-f1fddc07f068" />
+
+</br>
+</br>
+
+**4) domain의 value table 설정**
+
+<img width="537" height="570" alt="image" src="https://github.com/user-attachments/assets/7bd274cf-5723-4356-b0ef-efb6824dc255" />
