--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -129,33 +129,42 @@
 ### 실습 2
 
 **< 문제 >**
-- 체육관 (`GYM_ID`) : 가장 상위 개념
-- 클래스 (`CLASS_ID`) : 체육관에 종속됨
-- 회원 (`MEMBER_ID`) : 클래스에 종속됨
+- 클래스 (`CLASS_ID`) : 가장 상위 개념
+- 체육관 (`GYM_ID`) : 클래스에 종속됨
+- 회원 (`MEMBER_ID`) : 체육관에 종속됨
 
 <img width="553" height="504" alt="image" src="https://github.com/user-attachments/assets/f03492b1-6706-40f4-9c08-5cb3103a4126" />
 </br>
 </br>
 
-**1) 상위 `ZTGYM_B03` 테이블**
+**1) 상위 `ZTGYMCLASS_B03` 테이블**
 
-<img width="555" height="218" alt="image" src="https://github.com/user-attachments/assets/25c5a67f-c1ce-4d35-aaf5-728593e3bae8" />
+<img width="562" height="204" alt="image" src="https://github.com/user-attachments/assets/e6274522-5ad0-4c10-bd96-31c4c7201c18" />
+
 </br>
 </br>
 
-**2) `ZTGYM_B03` 테이블 내 외래 키 설정 - `CLASS_ID`**
-
-<img width="552" height="399" alt="image" src="https://github.com/user-attachments/assets/6eb2a140-ef07-4edb-9b53-f73378342cc5" />
-</br>
-</br>
-
-**3) `CLASS_ID`의 data element**
+**2) `CLASS_ID`의 data element**
 
 <img width="529" height="327" alt="image" src="https://github.com/user-attachments/assets/73ff5f37-9716-42c6-acd6-f1fddc07f068" />
 
 </br>
 </br>
 
-**4) domain의 value table 설정**
+**3) domain의 value table 설정**
 
 <img width="537" height="570" alt="image" src="https://github.com/user-attachments/assets/7bd274cf-5723-4356-b0ef-efb6824dc255" />
+</br>
+</br>
+
+**4) 상위 `ZTGYM_B03` 테이블**
+
+<img width="555" height="218" alt="image" src="https://github.com/user-attachments/assets/25c5a67f-c1ce-4d35-aaf5-728593e3bae8" />
+</br>
+</br>
+
+**5) `ZTGYM_B03` 테이블 내 외래 키 설정 - `CLASS_ID`**
+
+<img width="552" height="399" alt="image" src="https://github.com/user-attachments/assets/6eb2a140-ef07-4edb-9b53-f73378342cc5" />
+</br>
+</br>
