Update 프로그래핑 문법과 로직 (12.01).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -157,7 +157,7 @@
 </br>
 </br>
 
-**4) 상위 `ZTGYM_B03` 테이블**
+**4) 하위 `ZTGYM_B03` 테이블**
 
 <img width="555" height="218" alt="image" src="https://github.com/user-attachments/assets/25c5a67f-c1ce-4d35-aaf5-728593e3bae8" />
 </br>
