Update 프로그래핑 문법과 로직 (12.01).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -168,3 +168,17 @@
 <img width="552" height="399" alt="image" src="https://github.com/user-attachments/assets/6eb2a140-ef07-4edb-9b53-f73378342cc5" />
 </br>
 </br>
+
+**6) 하위 `ZTGYM_MEMBER_B03` 테이블**
+
+<img width="544" height="208" alt="image" src="https://github.com/user-attachments/assets/a99a91fc-35d3-4e73-b3e4-106a4ce847a2" />
+
+</br>
+</br>
+
+**5) `ZTGYM_MEMBER_B03` 테이블 내 외래 키 설정 - `CLASS_ID`**
+
+<img width="527" height="378" alt="image" src="https://github.com/user-attachments/assets/9496d018-3a49-4cbd-8d1d-9e77ed2cea02" />
+
+</br>
+</br>
