Update 프로그래핑 문법과 로직 (12.01).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -2,6 +2,8 @@
 - **상위/기준 엔티티** : 참조되는 테이블 (기본 키를 제공)
 - **하위/종속 엔티티** : 참조하는 테이블 (외래 키를 가짐)
 - 외래키는 하위 필드를 기준으로 결정
+- 외래키(Foreign Key)를 설정할 때는, 참조하는 테이블(체크 테이블)의 기본키 필드 순서와 외래키 필드 순서가 반드시 동일해야 함.
+- 외래키로 연결되는 체크테이블의 필드는 모두 기본키(Primary Key)여야 함.
 
 </br>
   
