Update 프로그래핑 문법과 로직 (12.01).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -178,9 +178,30 @@
 </br>
 </br>
 
-**5) `ZTGYM_MEMBER_B03` 테이블 내 외래 키 설정 - `CLASS_ID`**
+**7) `ZTGYM_MEMBER_B03` 테이블 내 외래 키 설정 - `CLASS_ID`**
 
-<img width="527" height="378" alt="image" src="https://github.com/user-attachments/assets/9496d018-3a49-4cbd-8d1d-9e77ed2cea02" />
+<img width="528" height="175" alt="image" src="https://github.com/user-attachments/assets/67ee4a80-dba8-4672-88e5-86beba62b97f" />
+
+</br>
+</br>
+
+**8) `ZTGYMCLASS_B03` 테이블 결과**
+
+<img width="528" height="175" alt="image" src="https://github.com/user-attachments/assets/883e3326-6d8c-4bfe-95d8-7e05955e1946" />
+
+</br>
+</br>
+
+**9) `ZTGYM_B03` 테이블 결과**
+
+<img width="525" height="275" alt="image" src="https://github.com/user-attachments/assets/d0c35e9b-b29f-4e0f-962b-ae62e6a73003" />
+
+</br>
+</br>
+
+**10) `ZTGYM_MEMBER_B03` 테이블 결과**
+
+<img width="523" height="215" alt="image" src="https://github.com/user-attachments/assets/2d975de8-0075-4051-828b-b781f930814e" />
 
 </br>
 </br>
