Update 프로그래핑 문법과 로직 (12.01).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -88,6 +88,16 @@
 <img width="529" height="331" alt="image" src="https://github.com/user-attachments/assets/d5312dea-d595-40e1-99c4-2cf2a5b82397" />
 </br>
 </br>
+</br>
+</br>
+
+---
+</br>
+
+## < Text Table >
+
+</br>
+</br>
 
 ---
 
