Update 프로그래핑 문법과 로직 (12.01).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -95,6 +95,18 @@
 </br>
 
 ## < Text Table >
+- 텍스트 테이블(Text Table)은 기존 메인 테이블의 데이터를 언어별로 저장하기 위한 테이블
+- 보통 테이블 이름 끝에 T를 붙임
+  - 예: `ZTGYM_MEMBER_B03T`
+</br>
+
+**필드 구성 규칙**
+- 전체 키 필드 = 메인 테이블의 모든 키 + 언어키(LANGU / SPRAS)
+- 언어 필드는 SPRAS 또는 LANGU 타입 사용
+- 언어 필드는 T002 테이블과 외래키(FK) 연결
+- 메인 테이블과도 외래키(FK) 연결
+- 모든 키 필드는 PK로 설정
+- 텍스트 필드는 일반 필드
 
 </br>
 </br>
