--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -108,6 +108,8 @@
 - 모든 키 필드는 PK로 설정
 - 텍스트 필드는 일반 필드
 
+<img width="525" height="204" alt="image" src="https://github.com/user-attachments/assets/1a8dad7d-230a-46b2-b3ea-950e0a79c40b" />
+
 </br>
 </br>
 
