Update 프로그래핑 문법과 로직 (12.01).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -109,6 +109,10 @@
 - 텍스트 필드는 일반 필드
 
 <img width="602" height="234" alt="image" src="https://github.com/user-attachments/assets/baa9e85c-5c6c-40c9-a65a-63b2ab9855bb" />
+</br>
+</br>
+
+<img width="543" height="392" alt="image" src="https://github.com/user-attachments/assets/ae7dc2e2-960e-4f88-b356-2a3038a67ec0" />
 
 
 </br>
