Update 프로그래핑 문법과 로직 (12.01).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -113,8 +113,20 @@
 </br>
 
 <img width="543" height="392" alt="image" src="https://github.com/user-attachments/assets/ae7dc2e2-960e-4f88-b356-2a3038a67ec0" />
+</br>
+</br>
+
+### < text table 예제 코드 >
+**1) `ZTDANGER_B03` 테이블 생성**
+
+<img width="508" height="197" alt="image" src="https://github.com/user-attachments/assets/9e8e5d43-51b9-4f25-b830-2d657fba3847" />
+</br>
+</br>
 
 
+
+</br>
+</br>
 </br>
 </br>
 
