Update 프로그래핑 문법과 로직 (12.01).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -122,10 +122,30 @@
 
 **1) `ZTDANGER_B03` 테이블 생성**
 
+<img width="556" height="194" alt="image" src="https://github.com/user-attachments/assets/acadcdff-4522-4c78-ac8b-d648542a414c" />
+
+</br>
+</br>
+
+**12) `ZTDANGER_B03T` 테이블 생성**
+
 <img width="508" height="197" alt="image" src="https://github.com/user-attachments/assets/9e8e5d43-51b9-4f25-b830-2d657fba3847" />
 </br>
 </br>
 
+**3) `DANGER_NO` 외래키 설정**
+
+<img width="503" height="363" alt="image" src="https://github.com/user-attachments/assets/22c5cdb6-fbdb-40d3-9d66-a10732c977fd" />
+
+</br>
+</br>
+
+**4) `LANGU` 외래키 설정**
+
+<img width="501" height="360" alt="image" src="https://github.com/user-attachments/assets/4e1a10d1-c32f-488e-8017-183a9e7f4768" />
+
+</br>
+</br>
 
 
 </br>
