Update 프로그래핑 문법과 로직 (12.01).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -147,6 +147,21 @@
 </br>
 </br>
 
+**5) 결과창**
+- `ZTDANGER_B03T` 결과
+<img width="385" height="198" alt="image" src="https://github.com/user-attachments/assets/b8ff79cf-3438-45fa-8667-9b6c5115c279" />
+
+</br>
+</br>
+- `ZTDANGER_B03` 결과 (영어)
+
+<img width="421" height="159" alt="image" src="https://github.com/user-attachments/assets/47f1f564-ccda-4e1c-8ea4-a877c5bebd71" />
+
+</br>
+</br>
+
+- `ZTDANGER_B03` 결과 (한국어)
+<img width="414" height="171" alt="image" src="https://github.com/user-attachments/assets/39a4706c-2b2f-41ca-83a1-3cef0093910f" />
 
 </br>
 </br>
