Update 프로그래핑 문법과 로직 (12.01).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -1,4 +1,4 @@
-## < 점검 테이블과 값 제한 관리 >
+<img width="555" height="218" alt="image" src="https://github.com/user-attachments/assets/d71b72e5-571a-4305-9d4f-5d3ae34f6061" />## < 점검 테이블과 값 제한 관리 >
 - **상위/기준 엔티티** : 참조되는 테이블 (기본 키를 제공)
 - **하위/종속 엔티티** : 참조하는 테이블 (외래 키를 가짐)
 - 외래키는 하위 필드를 기준으로 결정
@@ -284,6 +284,61 @@
 **10) `ZTGYM_MEMBER_B03` 테이블 결과**
 
 <img width="523" height="215" alt="image" src="https://github.com/user-attachments/assets/2d975de8-0075-4051-828b-b781f930814e" />
+
+</br>
+</br>
+</br>
+</br>
+
+### 실습 3
+- text table 실습
+
+**1) `ZTGYM_B03` 테이블**
+
+<img width="555" height="218" alt="image" src="https://github.com/user-attachments/assets/d7e0c6fa-ad4b-4d90-839e-748ab3dfc3c7" />
+</br>
+</br>
+
+**2) `ZTGYM_B03T` 테이블**
+
+<img width="551" height="193" alt="image" src="https://github.com/user-attachments/assets/90d0bd17-f1b0-42b8-be2f-a2cd88c4026f" />
+
+</br>
+</br>
+
+**3) 외래키 설정**
+- 'GYM_ID' 설정
+
+<img width="518" height="370" alt="image" src="https://github.com/user-attachments/assets/3bb051fd-7231-4ad3-95a5-40eeb4955bed" />
+</br>
+</br>
+
+- 'CLASS_ID' 설정
+  
+<img width="520" height="372" alt="image" src="https://github.com/user-attachments/assets/cbf8e2bd-b3f3-4e0f-8ce7-14cd28608c86" />
+</br>
+</br>
+
+- 'LANGU' 설정
+  
+<img width="504" height="360" alt="image" src="https://github.com/user-attachments/assets/751b75b5-1e2f-481b-b4c5-c69bc7df6b67" />
+</br>
+</br>
+
+**4) 결과창**
+- text table 결과
+  
+<img width="447" height="246" alt="image" src="https://github.com/user-attachments/assets/f59cf592-ee05-4967-a43a-5134005031dd" />
+</br>
+</br>
+
+- 다국어 설정 결과
+
+<img width="450" height="176" alt="image" src="https://github.com/user-attachments/assets/033caef2-0588-4b3f-b5a0-ab3b897dace1" />
+</br>
+</br>
+
+<img width="444" height="178" alt="image" src="https://github.com/user-attachments/assets/968aa163-0964-4625-8083-a417909e49ee" />
 
 </br>
 </br>
