Update 프로그래핑 문법과 로직 (12.01).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -342,3 +342,57 @@
 
 </br>
 </br>
+</br>
+</br>
+
+### 실습 4
+- text table 실습
+
+**1) `ZTGYM_MEMBER_B03` 테이블**
+
+<img width="534" height="198" alt="image" src="https://github.com/user-attachments/assets/874f4f69-34a0-428f-b6bb-6f2d8084092b" />
+
+</br>
+</br>
+
+**2) `ZTGYM_MEMBERB03T` 테이블**
+
+<img width="535" height="201" alt="image" src="https://github.com/user-attachments/assets/86f3bf82-0aaf-4552-a34a-27364b5c2dfc" />
+
+</br>
+</br>
+
+**3) 외래키 설정**
+- 'MEMBER_ID' 설정
+
+<img width="503" height="362" alt="image" src="https://github.com/user-attachments/assets/6d31ebef-556c-4b8c-9c2c-4b52bcb53252" />
+
+</br>
+</br>
+
+- 'LANGU' 설정
+  
+<img width="478" height="340" alt="image" src="https://github.com/user-attachments/assets/cafda627-d348-4ed2-917e-d67cdbb3a3af" />
+
+</br>
+</br>
+
+**4) 결과창**
+- text table 결과
+  
+<img width="421" height="220" alt="image" src="https://github.com/user-attachments/assets/dae65fe3-e259-43b1-afe5-9e0a92596677" />
+
+</br>
+</br>
+
+- 다국어 설정 결과
+
+<img width="448" height="133" alt="image" src="https://github.com/user-attachments/assets/3e42c1a5-404e-4b0f-b50f-6c89402b44e6" />
+
+</br>
+</br>
+
+<img width="461" height="146" alt="image" src="https://github.com/user-attachments/assets/7f204199-dae1-4acd-9114-1c3387e10844" />
+
+</br>
+</br>
