Update 프로그래핑 문법과 로직 (12.01).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -38,13 +38,13 @@
 - 한 레코드가 다른 테이블의 정확히 하나의 레코드와만 연결
 
 **2) 1:N (One to Many)**
-- 한 레코드가 다른 테이블의 여러 레코드와 연결 가능
+- 한 레코드가 다른 테이블의 여러 레코드와 연결 가능 (1 이상)
 
 **3) 1:C**
-- 특정 도메인 기반으로 한 개의 값이 여러 개의 제한 값과 연결되는 상황
+- 특정 도메인 기반으로 한 개의 값이 여러 개의 제한 값과 연결되는 상황 (0 or 1)
 
 **4) 1:CN**
-- 1:N과 유사하나, Check Table & Domain 조합을 통한 확장된 다중 매핑을 의미
+- 1:N과 유사하나, Check Table & Domain 조합을 통한 확장된 다중 매핑을 의미 (0 or 1 or 1 이상)
 
 <img width="495" height="341" alt="image" src="https://github.com/user-attachments/assets/6f5af294-992a-4ae0-904a-e70644e0f31d" />
 
@@ -262,7 +262,7 @@
 </br>
 
 **7) `ZTGYM_MEMBER_B03` 테이블 내 외래 키 설정 - `CLASS_ID`**
-
+- 복합 외래키 설정 (체크 테이블에서 키로 지정) 
 <img width="527" height="378" alt="image" src="https://github.com/user-attachments/assets/768849e3-5267-475f-99cb-452bc8239826" />
 
 </br>
@@ -308,19 +308,19 @@
 </br>
 
 **3) 외래키 설정**
-- 'GYM_ID' 설정
+- `GYM_ID` 설정
 
 <img width="518" height="370" alt="image" src="https://github.com/user-attachments/assets/3bb051fd-7231-4ad3-95a5-40eeb4955bed" />
 </br>
 </br>
 
-- 'CLASS_ID' 설정
+- `CLASS_ID` 설정
   
 <img width="520" height="372" alt="image" src="https://github.com/user-attachments/assets/cbf8e2bd-b3f3-4e0f-8ce7-14cd28608c86" />
 </br>
 </br>
 
-- 'LANGU' 설정
+- `LANGU` 설정
   
 <img width="504" height="360" alt="image" src="https://github.com/user-attachments/assets/751b75b5-1e2f-481b-b4c5-c69bc7df6b67" />
 </br>
@@ -364,14 +364,14 @@
 </br>
 
 **3) 외래키 설정**
-- 'MEMBER_ID' 설정
+- `MEMBER_ID` 설정
 
 <img width="503" height="362" alt="image" src="https://github.com/user-attachments/assets/6d31ebef-556c-4b8c-9c2c-4b52bcb53252" />
 
 </br>
 </br>
 
-- 'LANGU' 설정
+- `LANGU` 설정
   
 <img width="478" height="340" alt="image" src="https://github.com/user-attachments/assets/cafda627-d348-4ed2-917e-d67cdbb3a3af" />
 
