--- a/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.01).md
@@ -1,5 +1,6 @@
 ## < 점검 테이블과 값 제한 관리 >
 
+- **외래키 설정 시** : 데이터 입력할 때 '선택 목록'으로 제공됨
 - **상위/기준 엔티티** : 참조되는 테이블 (기본 키를 제공)
 - **하위/종속 엔티티** : 참조하는 테이블 (외래 키를 가짐)
 - 외래키는 하위 필드를 기준으로 결정
