Update 프로그래핑 문법과 로직 (12.02).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -36,6 +36,7 @@ SELECT <테이블1~필드>, <테이블2~필드>
   ON <테이블1~키> = <테이블2~키>
   WHERE <조건>.
 ```
+- `INNER JOIN` 예제
 ```abap
 SELECT SCARR~CARRID
        SPFLI~CONNID
@@ -50,25 +51,32 @@ SELECT SCARR~CARRID
     cl_demo_output=>display( lt_flight ).
   ENDIF.
 ```
+- `LEFT OUTER JOIN` 예제
 ```abap
-TYPES: BEGIN OF ts_data,
-        CARRID TYPE SCARR-CARRID,
-        CONNID TYPE SFLIGHT-CONNID,
-        FLDATE TYPE SFLIGHT-FLDATE,
-       END OF ts_data.
+DATA: BEGIN OF ls_flight,
+        carrid   TYPE s_carr_id,
+        connid   TYPE s_conn_id,
+        carrname TYPE s_carrname,
+        cityfrom TYPE s_from_cit,
+      END OF ls_flight.
+DATA: lt_flight LIKE TABLE OF ls_flight.
 
-DATA: gs_data TYPE ts_data,
-      gt_data TYPE TABLE OF ts_data.
+SELECT A~carrid B~connid A~carrname B~cityfrom
+  INTO TABLE lt_flight
+  FROM scarr AS A LEFT OUTER JOIN spfli AS B
+    ON A~carrid = B~carrid
+  WHERE A~carrid BETWEEN 'NG' AND 'UA'.
 
-SELECT C~CARRID F~CONNID F~FLDATE
-  INTO TABLE gt_data
-  FROM SCARR AS C INNER JOIN SFLIGHT AS F
-    ON C~CARRID = F~CARRID
-  WHERE C~CARRID = 'AA'.
+SORT lt_flight BY carrid.
 
-  IF sy-subrc = 0.
-    cl_demo_output=>display( gt_data ).
-  ENDIF.
+IF sy-subrc = 0.
+  LOOP AT lt_flight INTO ls_flight.
+    WRITE:/ ls_flight-carrid,
+            ls_flight-connid,
+            ls_flight-carrname,
+            ls_flight-cityfrom.
+  ENDLOOP.
+ENDIF.
 ```
 </br>
 </br>
