Update 프로그래핑 문법과 로직 (12.02).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -1,8 +1,36 @@
 ## < Table Join 방법 >
-### 1) Database View 이용
+### 1) DDIC(Database) View를 활용
 - DB 레벨에서 여러 테이블을 미리 조인하여 가상 테이블(View) 생성
 - 재사용 가능, SQL 최적화, 코드 간결
 - 조건 변경에는 유연하지 않음
+</br>
+
+**1-1) Database View**
+- 여러 테이블 조인 가능
+- WHERE 절 설정 가능 (Selection Condition)
+- JOIN 종류: 무조건 INNER JOIN
+- ABAP 프로그램에서 TYPE과 SELECT 모두 사용 가능
+</br>
+
+**1-2) Projection View**
+- 하나의 테이블에서 특정 필드만 추출 → Projection
+- JOIN 없음
+- ABAP 프로그램에서 TYPE/SELECT 모두 사용 가능
+</br>
+
+**1-3) Maintenance View**
+- 여러 테이블을 묶어서 한 화면에서 CRUD 가능
+- JOIN 방식: 무조건 LEFT OUTER JOIN
+- ABAP 프로그램에서 SELECT 불가 (테이블 유지 용도)
+</br>
+
+**1-4) Help View**
+- Search Help(F4 도움창)에서만 사용
+- JOIN 방식: 무조건 LEFT OUTER JOIN
+- 프로그램에서 SELECT로 사용 불가
+</br>
+
+
 ```abap
 SELECT <필드1> <필드2> ...
   FROM <DatabaseView>
