Update 프로그래핑 문법과 로직 (12.02).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -20,7 +20,7 @@ SELECT carrid connid carrname
 **1-1) Database View**
 - 여러 테이블 조인 가능
 - WHERE 절 설정 가능 (Selection Condition)
-- JOIN 종류: 무조건 INNER JOIN
+- JOIN 종류: 무조건 `INNER JOIN`
 - ABAP 프로그램에서 TYPE과 SELECT 모두 사용 가능
 </br>
 
@@ -32,7 +32,7 @@ SELECT carrid connid carrname
 
 **1-3) Maintenance View**
 - 여러 테이블을 묶어서 한 화면에서 CRUD 가능
-- JOIN 방식: 무조건 LEFT OUTER JOIN
+- JOIN 방식: 무조건 `LEFT OUTER JOIN`
 - ABAP 프로그램에서 SELECT 불가 (테이블 유지 용도)
 </br>
 
