Update 프로그래핑 문법과 로직 (12.02).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -32,6 +32,17 @@ SELECT carrid connid carrname
 - JOIN 없음
 - ABAP 프로그램에서 TYPE/SELECT 모두 사용 가능
 </br>
+
+**예제 1**
+- `SE11`에서 view 선택 후 생성
+  
+<img width="486" height="326" alt="image" src="https://github.com/user-attachments/assets/2e5bfcf7-3d2f-449a-a78e-2ab3ccebf2ac" />
+</br>
+</br>
+
+<img width="311" height="240" alt="image" src="https://github.com/user-attachments/assets/b93f7a4d-85e3-4bd0-ae65-67242bc1c841" />
+
+</br>
 </br>
 </br>
 
