Update 프로그래핑 문법과 로직 (12.02).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -41,6 +41,12 @@ SELECT carrid connid carrname
 </br>
 
 <img width="311" height="240" alt="image" src="https://github.com/user-attachments/assets/b93f7a4d-85e3-4bd0-ae65-67242bc1c841" />
+</br>
+</br>
+</br>
+
+- 출력할 필드 선택
+<img width="491" height="229" alt="image" src="https://github.com/user-attachments/assets/db775d5b-607c-4cf4-8629-d75f18a5e721" />
 
 </br>
 </br>
