Update 프로그래핑 문법과 로직 (12.02).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -25,6 +25,17 @@ SELECT carrid connid carrname
 - ABAP 프로그램에서 TYPE과 SELECT 모두 사용 가능
 </br>
 </br>
+
+**예제**
+- `Table/Join Conditions` 에서 출력할 테이블 선택
+
+<img width="495" height="234" alt="image" src="https://github.com/user-attachments/assets/5db6f42c-bdab-4ec5-bb9b-10ea1c18cdc6" />
+</br>
+</br>
+
+
+</br>
+</br>
 </br>
 
 **1-2) Projection View**
@@ -34,7 +45,7 @@ SELECT carrid connid carrname
 </br>
 </br>
 
-**예제 1**
+**예제**
 - `SE11`에서 view 선택 후 생성
   
 <img width="423" height="283" alt="image" src="https://github.com/user-attachments/assets/eaed92d0-3775-457e-bd89-ed2df2e600b6" />
@@ -42,7 +53,6 @@ SELECT carrid connid carrname
 </br>
 
 <img width="311" height="240" alt="image" src="https://github.com/user-attachments/assets/b93f7a4d-85e3-4bd0-ae65-67242bc1c841" />
-</br>
 </br>
 </br>
 
