--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -26,10 +26,33 @@ SELECT carrid connid carrname
 </br>
 </br>
 
-**예제**
+**예제 1**
 - `Table/Join Conditions` 에서 출력할 테이블 선택
 
 <img width="495" height="234" alt="image" src="https://github.com/user-attachments/assets/5db6f42c-bdab-4ec5-bb9b-10ea1c18cdc6" />
+
+</br>
+</br>
+
+- `View Fields` 에서 출력할 필드 선택
+
+<img width="494" height="238" alt="image" src="https://github.com/user-attachments/assets/74c7d487-5ea1-4f47-801a-1b8e3f3b9fa0" />
+
+</br>
+</br>
+
+- `Selection Conditions` 에서 where 조건 달기
+- operator(EQ, NQ) 와 AND/OR 조건 달기
+
+<img width="494" height="146" alt="image" src="https://github.com/user-attachments/assets/174e9455-6f28-4f5a-8ed5-fed56f11bd6f" />
+
+</br>
+</br>
+
+- `View Fields` 출력할 필드 선택
+
+<img width="494" height="238" alt="image" src="https://github.com/user-attachments/assets/74c7d487-5ea1-4f47-801a-1b8e3f3b9fa0" />
+
 </br>
 </br>
 
