Update 프로그래핑 문법과 로직 (12.02).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -34,9 +34,41 @@ SELECT carrid connid carrname
 </br>
 </br>
 
-- `View Fields` 에서 출력할 필드 선택
+- `View Fields` 에서 Table fields 눌러서 출력할 필드 선택
 
 <img width="494" height="238" alt="image" src="https://github.com/user-attachments/assets/74c7d487-5ea1-4f47-801a-1b8e3f3b9fa0" />
+
+</br>
+</br>
+
+- `Selection Conditions` 에서 where 조건 달기
+- operator(EQ, NQ) 와 AND/OR 조건 달기
+
+<img width="494" height="146" alt="image" src="https://github.com/user-attachments/assets/174e9455-6f28-4f5a-8ed5-fed56f11bd6f" />
+
+</br>
+</br>
+
+- `View Fields` 에서 Table fields 눌러서 출력할 필드 선택
+
+<img width="494" height="238" alt="image" src="https://github.com/user-attachments/assets/74c7d487-5ea1-4f47-801a-1b8e3f3b9fa0" />
+
+</br>
+</br>
+</br>
+</br>
+
+**예제 2**
+- `Table/Join Conditions` 에서 IN 조건에 넣을 필드와 테이블 선택
+
+<img width="498" height="292" alt="image" src="https://github.com/user-attachments/assets/2322d3fe-31f2-4096-b1de-fe1ea0382ae2" />
+
+</br>
+</br>
+
+- `View Fields` 에서 Table fields 눌러서 출력할 필드 선택
+
+<img width="489" height="296" alt="image" src="https://github.com/user-attachments/assets/d2e884ab-e5b1-4342-ab4f-e345dfacc6b9" />
 
 </br>
 </br>
@@ -52,13 +84,6 @@ SELECT carrid connid carrname
 - `View Fields` 출력할 필드 선택
 
 <img width="494" height="238" alt="image" src="https://github.com/user-attachments/assets/74c7d487-5ea1-4f47-801a-1b8e3f3b9fa0" />
-
-</br>
-</br>
-</br>
-</br>
-
-**예제 2**
 
 </br>
 </br>
