Update 프로그래핑 문법과 로직 (12.02).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -34,7 +34,7 @@ SELECT carrid connid carrname
 </br>
 </br>
 
-- `View Fields` 에서 Table fields 눌러서 출력할 필드 선택
+- `View Fields` 에서 `Table fields` 눌러서 출력할 필드 선택
 
 <img width="494" height="238" alt="image" src="https://github.com/user-attachments/assets/74c7d487-5ea1-4f47-801a-1b8e3f3b9fa0" />
 
@@ -60,7 +60,7 @@ SELECT carrid connid carrname
 </br>
 </br>
 
-- `View Fields` 에서 Table fields 눌러서 출력할 필드 선택
+- `View Fields` 에서 `Table fields` 눌러서 출력할 필드 선택
 
 <img width="489" height="296" alt="image" src="https://github.com/user-attachments/assets/d2e884ab-e5b1-4342-ab4f-e345dfacc6b9" />
 
