--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -27,9 +27,14 @@ SELECT carrid connid carrname
 </br>
 
 **예제 1**
-- `Table/Join Conditions` 에서 출력할 테이블 선택
+- `Table/Join Conditions` 에서 `Relationships` 눌러서 출력할 테이블 선택
 
 <img width="495" height="234" alt="image" src="https://github.com/user-attachments/assets/5db6f42c-bdab-4ec5-bb9b-10ea1c18cdc6" />
+
+</br>
+</br>
+
+<img width="485" height="358" alt="image" src="https://github.com/user-attachments/assets/32ead43f-85cb-4bc0-b492-0664b9c5b5fe" />
 
 </br>
 </br>
