Update 프로그래핑 문법과 로직 (12.02).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -18,7 +18,7 @@ SELECT carrid connid carrname
 </br>
 </br>
 
-**1-1) Database View**
+### 1-1) Database View
 - 여러 테이블 조인 가능
 - WHERE 절 설정 가능 (Selection Condition)
 - JOIN 종류: 무조건 `INNER JOIN`
@@ -85,7 +85,7 @@ SELECT carrid connid carrname
 </br>
 </br>
 
-**1-2) Projection View**
+### 1-2) Projection View
 - 하나의 테이블에서 특정 필드만 추출 → Projection
 - JOIN 없음
 - ABAP 프로그램에서 TYPE/SELECT 모두 사용 가능
