--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -109,8 +109,9 @@ SELECT carrid connid carrname
 </br>
 </br>
 </br>
+</br>
 
-**1-3) Maintenance View**
+ ### 1-3) Maintenance View
 - 여러 테이블을 묶어서 한 화면에서 CRUD 가능
 - JOIN 방식: 무조건 `LEFT OUTER JOIN`
 - ABAP 프로그램에서 SELECT 불가 (테이블 유지 용도)
@@ -118,7 +119,7 @@ SELECT carrid connid carrname
 </br>
 </br>
 
-**1-4) Help View**
+### 1-4) Help View
 - Search Help(F4 도움창)에서만 사용
 - JOIN 방식: 무조건 LEFT OUTER JOIN
 - 프로그램에서 SELECT로 사용 불가
