Update 프로그래핑 문법과 로직 (12.02).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -1,5 +1,5 @@
-## < Table Join 방법 >
-### 1) DDIC(Database) View를 활용
+# < Table Join 방법 >
+## 1) DDIC(Database) View를 활용
 - DB 레벨에서 여러 테이블을 미리 조인하여 가상 테이블(View) 생성
 - 재사용 가능, SQL 최적화, 코드 간결
 - 조건 변경에는 유연하지 않음
@@ -129,7 +129,7 @@ SELECT carrid connid carrname
 </br>
 </br>
 
-### 2) 프로그램에서 직접 조인
+## 2) 프로그램에서 직접 조인
 - ABAP 프로그램 안에서 SELECT문에서 직접 JOIN 수행
 - 조건을 동적으로 처리 가능, 유연성 높음
 - 코드 길어지고, DB 최적화는 View보다 어려움
