--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -85,6 +85,45 @@ SELECT carrid connid carrname
 </br>
 </br>
 
+</br>
+</br>
+</br>
+</br>
+</br>
+
+**예제 3**
+- `Table/Join Conditions` 에서 `Relationships` 눌러서 출력할 테이블 선택
+
+<img width="509" height="183" alt="image" src="https://github.com/user-attachments/assets/12d9f3e0-6209-4e93-b3b5-39ac47dd2b39" />
+
+</br>
+</br>
+
+<img width="485" height="358" alt="image" src="https://github.com/user-attachments/assets/32ead43f-85cb-4bc0-b492-0664b9c5b5fe" />
+
+</br>
+</br>
+
+- `View Fields` 에서 `Table fields` 눌러서 출력할 필드 선택
+
+<img width="489" height="296" alt="image" src="https://github.com/user-attachments/assets/d2e884ab-e5b1-4342-ab4f-e345dfacc6b9" />
+
+</br>
+</br>
+
+- `Selection Conditions` 에서 where 조건 달기
+- operator(EQ, NQ) 와 AND/OR 조건 달기
+
+<img width="488" height="173" alt="image" src="https://github.com/user-attachments/assets/449f2abb-705c-427b-a2b6-6d7e5f291384" />
+
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+
+
 ### 1-2) Projection View
 - 하나의 테이블에서 특정 필드만 추출 → Projection
 - JOIN 없음
