Update 프로그래핑 문법과 로직 (12.02).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -27,7 +27,7 @@ SELECT carrid connid carrname
 </br>
 
 **예제 1**
-- `Table/Join Conditions` 에서 `Relationships` 눌러서 출력할 테이블 선택
+- `Table/Join Conditions` 에서 IN 조건에 넣을 필드와 테이블 선택
 
 <img width="495" height="234" alt="image" src="https://github.com/user-attachments/assets/5db6f42c-bdab-4ec5-bb9b-10ea1c18cdc6" />
 
@@ -54,7 +54,7 @@ SELECT carrid connid carrname
 </br>
 
 **예제 2**
-- `Table/Join Conditions` 에서 IN 조건에 넣을 필드와 테이블 선택
+- `Table/Join Conditions` 에서 `Relationships` 눌러서 출력할 테이블 선택
 
 <img width="498" height="292" alt="image" src="https://github.com/user-attachments/assets/2322d3fe-31f2-4096-b1de-fe1ea0382ae2" />
 
@@ -69,6 +69,11 @@ SELECT carrid connid carrname
 - `View Fields` 에서 `Table fields` 눌러서 출력할 필드 선택
 
 <img width="489" height="296" alt="image" src="https://github.com/user-attachments/assets/d2e884ab-e5b1-4342-ab4f-e345dfacc6b9" />
+
+</br>
+</br>
+
+<img width="493" height="175" alt="image" src="https://github.com/user-attachments/assets/42197eb0-ec3e-4f47-9982-b5f59622eb2e" />
 
 </br>
 </br>
@@ -99,14 +104,11 @@ SELECT carrid connid carrname
 </br>
 </br>
 
-<img width="485" height="358" alt="image" src="https://github.com/user-attachments/assets/32ead43f-85cb-4bc0-b492-0664b9c5b5fe" />
+- `View Fields` 에서 출력할 필드 선택
+- `*` : 테이블의 모든 필드 자동 포함
+- `- 필드명` : 특정 필드만 제외
 
-</br>
-</br>
-
-- `View Fields` 에서 `Table fields` 눌러서 출력할 필드 선택
-
-<img width="489" height="296" alt="image" src="https://github.com/user-attachments/assets/d2e884ab-e5b1-4342-ab4f-e345dfacc6b9" />
+<img width="506" height="196" alt="image" src="https://github.com/user-attachments/assets/e0e79c5e-8d5a-4944-b7c7-b60724061384" />
 
 </br>
 </br>
