Update 프로그래핑 문법과 로직 (12.02).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -150,6 +150,62 @@ SELECT carrid connid carrname
 - 여러 테이블을 묶어서 한 화면에서 CRUD 가능
 - JOIN 방식: 무조건 `LEFT OUTER JOIN`
 - ABAP 프로그램에서 SELECT 불가 (테이블 유지 용도)
+
+</br>
+</br>
+
+**예제 1**
+- `Maint.Status` 에서 Access 조건 선택
+  
+<img width="629" height="388" alt="image" src="https://github.com/user-attachments/assets/ca869525-3a12-4602-8685-0999e7ba9df8" />
+
+</br>
+</br>
+
+- `View Fields` 에서 `Table fields` 눌러서 출력할 필드 선택
+
+<img width="494" height="238" alt="image" src="https://github.com/user-attachments/assets/74c7d487-5ea1-4f47-801a-1b8e3f3b9fa0" />
+
+</br>
+</br>
+
+- `Selection Conditions` 에서 where 조건 달기
+- operator(EQ, NQ) 와 AND/OR 조건 달기
+
+<img width="494" height="146" alt="image" src="https://github.com/user-attachments/assets/174e9455-6f28-4f5a-8ed5-fed56f11bd6f" />
+
+
+</br>
+</br>
+</br>
+</br>
+</br>
+
+**예제 2**
+- `Table/Join Conditions` 에서 `Relationships` 눌러서 출력할 테이블 선택
+
+<img width="498" height="292" alt="image" src="https://github.com/user-attachments/assets/2322d3fe-31f2-4096-b1de-fe1ea0382ae2" />
+
+</br>
+</br>
+
+<img width="485" height="358" alt="image" src="https://github.com/user-attachments/assets/32ead43f-85cb-4bc0-b492-0664b9c5b5fe" />
+
+</br>
+</br>
+
+- `View Fields` 에서 `Table fields` 눌러서 출력할 필드 선택
+
+<img width="489" height="296" alt="image" src="https://github.com/user-attachments/assets/d2e884ab-e5b1-4342-ab4f-e345dfacc6b9" />
+
+</br>
+</br>
+
+<img width="547" height="194" alt="image" src="https://github.com/user-attachments/assets/2846f5ba-bd2f-40fb-bbc0-30a860f7e13b" />
+
+</br>
+</br>
+</br>
 </br>
 </br>
 </br>
