Update 프로그래핑 문법과 로직 (12.02).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -98,7 +98,7 @@ SELECT carrid connid carrname
 </br>
 </br>
 
-- `View Fields` 에서 출력할 필드 선택
+- `View Fields` 에서 `Table fields` 눌러서 출력할 필드 선택
 - `*` : 테이블의 모든 필드 자동 포함
 - `- 필드명` : 특정 필드만 제외
 
@@ -162,18 +162,54 @@ SELECT carrid connid carrname
 </br>
 </br>
 
+- `Table/Join Conditions` 에서 출력할 테이블 선택
+
+<img width="622" height="478" alt="image" src="https://github.com/user-attachments/assets/3b6efd3c-96b9-4d42-a626-84130e0a2341" />
+
+</br>
+</br>
+
 - `View Fields` 에서 `Table fields` 눌러서 출력할 필드 선택
 
-<img width="494" height="238" alt="image" src="https://github.com/user-attachments/assets/74c7d487-5ea1-4f47-801a-1b8e3f3b9fa0" />
+<img width="627" height="303" alt="image" src="https://github.com/user-attachments/assets/14a29c38-fcf1-4dd7-ac9f-719f3517b048" />
 
 </br>
 </br>
 
-- `Selection Conditions` 에서 where 조건 달기
-- operator(EQ, NQ) 와 AND/OR 조건 달기
+- `utilities -> table maintenance generator` 선택
+  
+<img width="623" height="383" alt="image" src="https://github.com/user-attachments/assets/d2289232-5df1-44ff-9e29-cfe8d621d0a9" />
 
-<img width="494" height="146" alt="image" src="https://github.com/user-attachments/assets/174e9455-6f28-4f5a-8ed5-fed56f11bd6f" />
+</br>
+</br>
 
+- dialog 작성
+ 
+<img width="646" height="438" alt="image" src="https://github.com/user-attachments/assets/9c6fdc38-a1b6-4f9d-8ac0-3bb45e9c2f11" />
+</br>
+</br>
+
+- function group 생성 후 active까지 하기 (그룹 마우스 우클릭)
+<img width="306" height="305" alt="image" src="https://github.com/user-attachments/assets/09948041-9902-4a30-80b3-0f38ef9c3f02" />
+</br>
+</br>
+
+- 결과 확인 (조회, 수정, 삭제 CRUD 기능 가능)
+<img width="643" height="403" alt="image" src="https://github.com/user-attachments/assets/f279ac8f-5eaa-42ba-8319-ef322e111fa0" />
+</br>
+</br>
+
+- `two step` 일 경우 더블클릭 시 수정 가능
+  
+<img width="619" height="254" alt="image" src="https://github.com/user-attachments/assets/f783e467-1560-4c1f-94da-1d26c3a9af83" />
+
+</br>
+</br>
+
+<img width="413" height="303" alt="image" src="https://github.com/user-attachments/assets/34bc5a63-0c97-4020-b73d-0f598210cc2d" />
+
+</br>
+</br>
 
 </br>
 </br>
