Update 프로그래핑 문법과 로직 (12.02).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -146,7 +146,7 @@ SELECT carrid connid carrname
 </br>
 </br>
 
- ### 1-3) Maintenance View
+ ### 1-3) Maintenance View (SE54, SE30)
 - 여러 테이블을 묶어서 한 화면에서 CRUD 가능
 - JOIN 방식: 무조건 `LEFT OUTER JOIN`
 - ABAP 프로그램에서 SELECT 불가 (테이블 유지 용도)
@@ -210,34 +210,46 @@ SELECT carrid connid carrname
 
 </br>
 </br>
-
-</br>
-</br>
 </br>
 </br>
 </br>
 
 **예제 2**
-- `Table/Join Conditions` 에서 `Relationships` 눌러서 출력할 테이블 선택
+- `Table/Join Conditions` 에서 출력할 테이블 선택
 
-<img width="498" height="292" alt="image" src="https://github.com/user-attachments/assets/2322d3fe-31f2-4096-b1de-fe1ea0382ae2" />
-
-</br>
-</br>
-
-<img width="485" height="358" alt="image" src="https://github.com/user-attachments/assets/32ead43f-85cb-4bc0-b492-0664b9c5b5fe" />
+<img width="598" height="382" alt="image" src="https://github.com/user-attachments/assets/0cd634b1-f761-47b3-ae51-3aae0193e05e" />
 
 </br>
 </br>
 
 - `View Fields` 에서 `Table fields` 눌러서 출력할 필드 선택
 
-<img width="489" height="296" alt="image" src="https://github.com/user-attachments/assets/d2e884ab-e5b1-4342-ab4f-e345dfacc6b9" />
+<img width="650" height="256" alt="image" src="https://github.com/user-attachments/assets/0b209476-4a8f-497f-a497-22aff6022cd0" />
 
 </br>
 </br>
 
-<img width="547" height="194" alt="image" src="https://github.com/user-attachments/assets/2846f5ba-bd2f-40fb-bbc0-30a860f7e13b" />
+- `utilities -> table maintenance generator` 선택 (dialog 작성)
+  
+<img width="650" height="472" alt="image" src="https://github.com/user-attachments/assets/db6ee4f1-d457-45c1-a442-f77213e8097c" />
+</br>
+</br>
+
+- function group 생성 후 active까지 하기 (그룹 마우스 우클릭)
+  
+<img width="374" height="355" alt="image" src="https://github.com/user-attachments/assets/fc9e1ec2-e0ce-4bf8-b017-33a00ad4702c" />
+</br>
+</br>
+
+- `one step` 일 경우 더블클릭해도 수정 불가능
+
+<img width="517" height="260" alt="image" src="https://github.com/user-attachments/assets/2cf9e82f-965d-4c0c-adae-b424efc9d456" />
+</br>
+</br>
+
+- `SM30`으로 이동 후 수정, 조회, 삭제 등 가능
+  
+<img width="507" height="336" alt="image" src="https://github.com/user-attachments/assets/164eb900-f1bd-4fcd-ab90-d43c83dabd2e" />
 
 </br>
 </br>
