Update 프로그래핑 문법과 로직 (12.02).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -340,3 +340,37 @@ ENDIF.
 
 ## < 실습 코드 >
 ### 실습 1
+- `Table/Join Conditions` 에서 `Relationships` 눌러서 출력할 테이블 선택
+
+<img width="616" height="372" alt="image" src="https://github.com/user-attachments/assets/276f20de-44f0-4b98-bee8-37d380c11332" />
+
+</br>
+</br>
+
+- `View Fields` 에서 `Table fields` 눌러서 출력할 필드 선택
+
+<img width="617" height="327" alt="image" src="https://github.com/user-attachments/assets/f771c3a7-a19b-4f8b-835c-d7c4dce0414f" />
+
+</br>
+</br>
+
+- `Maint.Status` 에서 Access 조건 선택
+  
+<img width="625" height="402" alt="image" src="https://github.com/user-attachments/assets/77cb2dee-b1ab-4d08-b890-6fbeb04b4e1c" />
+</br>
+</br>
+
+- dialog 작성
+ 
+<img width="606" height="479" alt="image" src="https://github.com/user-attachments/assets/c20175d4-0783-4589-a442-07fee6f2f0ac" />
+</br>
+</br>
+
+- function group 생성 후 active까지 하기 (그룹 마우스 우클릭)
+<img width="304" height="292" alt="image" src="https://github.com/user-attachments/assets/6aa54123-32c2-49d9-8a6c-01a1a2670f15" />
+
+</br>
+</br>
+</br>
+</br>
+</br>
