Update 프로그래핑 문법과 로직 (12.02).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -1,3 +1,10 @@
+## Append Structure
+- 1개의 Append Structure → 1개의 테이블에만 적용 가능
+- 1개의 테이블 → 여러 개 Append Structure 가능
+
+</br>
+</br>
+
 # < Table Join 방법 >
 ## 1) DDIC(Database) View를 활용
 - DB 레벨에서 여러 테이블을 미리 조인하여 가상 테이블(View) 생성
