Update 프로그래핑 문법과 로직 (12.02).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -1,6 +1,28 @@
+## 테이블 필드 데이터형을 수정하고 싶을 때 
+</br>
+
+**1) Url을 char 1로 바꾸기**
+
+<img width="654" height="240" alt="image" src="https://github.com/user-attachments/assets/12913734-892b-47f5-bd30-663cb1987814" />
+</br>
+</br>
+
+**2) `Utilities -> Database object -> Database Utility` 선택**
+
+<img width="584" height="360" alt="image" src="https://github.com/user-attachments/assets/80b5e021-23b0-43b6-8b87-f13f9c2641c8" />
+
+</br>
+</br>
+
+**3) `Activate and adjust database` 선택**
+
+<img width="553" height="425" alt="image" src="https://github.com/user-attachments/assets/4e738638-1168-4bf1-aa2d-e843c44cb12f" />
+
 ## Append Structure
+- 이블을 “수정(확장)”할 때 쓰는 방식
 - 1개의 Append Structure → 1개의 테이블에만 적용 가능
 - 1개의 테이블 → 여러 개 Append Structure 가능
+</br>
 
 </br>
 </br>
