Update 프로그래핑 문법과 로직 (12.02).md

--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -25,9 +25,21 @@
 </br>
 
 ## Append Structure
-- 이블을 “수정(확장)”할 때 쓰는 방식
+- 테이블에 새 필드를 추가할 때 쓰는 ‘확장 전용 구조’
 - 1개의 Append Structure → 1개의 테이블에만 적용 가능
 - 1개의 테이블 → 여러 개 Append Structure 가능
+</br>
+
+**1) `Extras -> Enhancement Category` 클릭**
+
+<img width="497" height="364" alt="image" src="https://github.com/user-attachments/assets/ba6750d8-ae3d-40d2-b733-fc8ac37f79cb" />
+</br>
+</br>
+
+**2) 해당 버튼 클릭**
+
+<img width="674" height="224" alt="image" src="https://github.com/user-attachments/assets/fdb08d5d-5e4e-458a-bb00-c52177610248" />
+</br>
 </br>
 
 </br>
