--- a/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
+++ b/ABAP 기초/프로그래핑 문법과 로직 (12.02).md
@@ -42,6 +42,20 @@
 </br>
 </br>
 
+**3) `Append Structure` 생성**
+
+<img width="602" height="276" alt="image" src="https://github.com/user-attachments/assets/167e5254-6c8a-4d91-9cc5-0d34abfb3b0e" />
+
+</br>
+</br>
+
+**2) Append Structure 필드 정의**
+
+<img width="602" height="250" alt="image" src="https://github.com/user-attachments/assets/57701f4f-8450-411a-891f-6aedfa9d0d20" />
+
+</br>
+</br>
+
 </br>
 </br>
 
